--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
         <section class="logo"><img class="logoimg" src="images/logo.JPG" alt=""></section>
         <section class="social-icon">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Menu</a></li>
             <li><a href="restaurant.html">Restaurant</a></li>
             <li><a href="about.html">About Us</a></li>
