--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
         <section class="services">
             <section class="service">
                 <h4>Breakfast</h4>
-                <img src="./images/breakfast1.jpg" alt="" srcset="">
+                <img src="breakfast1.jpg" alt="" srcset="">
 <!---------Toast Breakfast-->            
                 <div class="food-item-container">
                     <div>
