--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body >
 
 	<nav>
-        <section class="logo"><img class="logoimg" src="images/logo.JPG" alt=""></section>
+        <section class="logo"><img class="logoimg" src="logo.JPG" alt=""></section>
         <section class="social-icon">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -44,7 +44,7 @@
 		     </div>
 
 		     <div class="column">
-		     	<img src="images/chef.png" class="bigger-img">
+		     	<img src="chef.png" class="bigger-img">
 		     	<i
 		     </div>
        	 </main>
@@ -62,7 +62,7 @@
 
       <main>
         <div class="single-exco" >
-         <img class="opg" src="images/chef.png" >
+         <img class="opg" src="chef.png" >
           <div class="exco-text">
              <p class="team-member-name">
                General Manager, Hussy 
@@ -89,7 +89,7 @@
         </div>
 
         <div class="single-exco" >
-            <img class="opg" src="images/cook-196932_1280.jpg" >
+            <img class="opg" src="cook-196932_1280.jpg" >
              <div class="exco-text">
                 <p class="team-member-name">
                   Ammi
@@ -116,7 +116,7 @@ Experience: 10+ years in culinary industry<br>
 
 
            <div class="single-exco" >
-            <img class="opg" src="images/istockphoto-1386396449-1024x1024.jpg" >
+            <img class="opg" src="istockphoto-1386396449-1024x1024.jpg" >
              <div class="exco-text">
                 <p class="team-member-name">
              Chef John
@@ -143,7 +143,7 @@ Experience: 10+ years in culinary industry<br>
            </div>
 
            <div class="single-exco" >
-            <img class="opg" src="images/istockphoto-1389857295-1024x1024.jpg" >
+            <img class="opg" src="istockphoto-1389857295-1024x1024.jpg" >
              <div class="exco-text">
                 <p class="team-member-name">
                  Sharifat
