--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
 
 <title>About Us - Makay Restaurant</title>
-<link rel="stylesheet" href="css/style.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="css/styl.css">
+<link rel="stylesheet" href="style.css" type="text/css">
+<link rel="stylesheet" type="text/css" href="styl.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" >
 
