--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
     <nav>
-        <section class="logo"><img class="logoimg" src="images/logo.JPG" alt=""></section>
+        <section class="logo"><img class="logoimg" src="logo.JPG" alt=""></section>
         <section class="social-icon">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -115,7 +115,7 @@
 
                     <section class="service">
                         <h4>Lunch</h4>
-                        <img src="./images/lunch1.jpg" alt="" srcset="">
+                        <img src=".lunch1.jpg" alt="" srcset="">
         <!---------Jollof Lunch-->            
                         <div class="food-item-container">
                             <div>
@@ -205,7 +205,7 @@
 
             <section class="service">
                         <h4>Dinner</h4>
-                        <img src="./images/dinner.jpg" alt="" srcset="">
+                        <img src=".dinner.jpg" alt="" srcset="">
         <!---------Soup dinner-->            
                         <div class="food-item-container">
                             <div>
@@ -295,7 +295,7 @@
 
                     <section class="service">
                         <h4>Dessert</h4>
-                        <img src="./images/dessert.jpg" alt="" srcset="">
+                        <img src=".dessert.jpg" alt="" srcset="">
         <!---------Toast Breakfast-->            
                         <div class="food-item-container">
                             <div>
