--- a/restaurant.html
+++ b/restaurant.html
@@ -3,7 +3,7 @@
 <head>
 
 <title>Makay Restaurant- Home</title>
-<link rel="stylesheet" href="css/style.css" type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css">
  
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" >
@@ -15,7 +15,7 @@
 <body >
 
 	<nav>
-        <section class="logo"><img class="logoimg" src="images/logo.JPG" alt=""></section>
+        <section class="logo"><img class="logoimg" src="logo.JPG" alt=""></section>
         <section class="social-icon">
         <ul>
             <li><a href="index.html">Home</a></li>
