--- a/menu.html
+++ b/menu.html
@@ -115,7 +115,7 @@
 
                     <section class="service">
                         <h4>Lunch</h4>
-                        <img src=".lunch1.jpg" alt="" srcset="">
+                        <img src="lunch1.jpg" alt="" srcset="">
         <!---------Jollof Lunch-->            
                         <div class="food-item-container">
                             <div>
@@ -205,7 +205,7 @@
 
             <section class="service">
                         <h4>Dinner</h4>
-                        <img src=".dinner.jpg" alt="" srcset="">
+                        <img src="dinner.jpg" alt="" srcset="">
         <!---------Soup dinner-->            
                         <div class="food-item-container">
                             <div>
@@ -295,7 +295,7 @@
 
                     <section class="service">
                         <h4>Dessert</h4>
-                        <img src=".dessert.jpg" alt="" srcset="">
+                        <img src="dessert.jpg" alt="" srcset="">
         <!---------Toast Breakfast-->            
                         <div class="food-item-container">
                             <div>
